--- a/Django_blogproject/Django-Blog/Dblogproject/blog/templates/home.html
+++ b/Django_blogproject/Django-Blog/Dblogproject/blog/templates/home.html
@@ -1,10 +1,10 @@
-<body style="padding:5px">
+<body style="padding:5px; background-color: lightcyan;">
 
-    <h1>블로그 프로젝트</h1>
-    <a href="{% url 'new' %}">새로운 글 만들기</a>
+    <h1>❤️블로그 프로젝트💖</h1>
+    <a href="{% url 'new' %}" style="text-decoration:none">✏️새로운 글 만들기</a>
 
 {% for blog in blogs.all %}
-<div style="margin:10px; padding:5px; border:1px solid; border-color: gray; border-radius:10px; background-color:#ffffc2; ">
+<div style="margin:10px; padding:5px; border:3px solid; border-color: rgb(234, 58, 128); border-radius:10px; background-color:#e7e1e7; ">
 <h3>{{blog.title}}</h3>
 {{blog.date}}
 <br>
