--- a/Django_blogproject/Django-Blog/Dblogproject/blog/templates/new.html
+++ b/Django_blogproject/Django-Blog/Dblogproject/blog/templates/new.html
@@ -20,6 +20,7 @@
         본문 : <textarea name="body" cols="30" rows="10"></textarea>
         -->
         {{ form.as_p}}      <!--as_p: 태그로 감싸서 불러오겠다는 의미-->
+        해시태그<input type="text" name="hashtags" placehorder="해시태그 , 로 구분">
         <button type="submit">제출</button>
         
     </form>
