--- a/Django_blogproject/Django-Blog/Dblogproject/blog/templates/detail.html
+++ b/Django_blogproject/Django-Blog/Dblogproject/blog/templates/detail.html
@@ -1,8 +1,29 @@
-<h3>{{blog.title}}</h3>
+<body style="padding:5px; background-color: rgb(246, 248, 220);">
+<h2>😊{{blog.title}}</h2>
 {{blog.date}}
+
+<p>{{blog.body}}</p>
 <br>
-{{blog.body}}
+<div>
+    {% for hashtag in hashtags.all %} 
+    💝{{hashtag}} 
+    {% endfor %}
+</div>
 
 <a href="{% url 'delete' blog.id %}">삭제하기</a>
 <a href="{% url 'update_page' blog.id %}">수정하기</a>
 <a href="{% url 'home' %}">홈으로 돌아가기</a>
+
+<br> 
+<br>
+<hr>
+<a class ="add_comment" href="{% url 'add_comment' blog.id %}">댓글 달기</a>
+{% for comment in blog.comments.all %} 
+<div class ="comment">
+    <strong class = "username">{{comment.username}}</strong> 
+    <div class="date">{{comment.created_At}}</div> 
+    <p>{{comment.comment_text|linebreaks}}</p>
+</div>
+{% empty %} 
+<p> 아직 댓글이 없어요 :( </p>
+{% endfor %}
