--- a/Django_blogproject/Django-Blog/Dblogproject/blog/templates/update.html
+++ b/Django_blogproject/Django-Blog/Dblogproject/blog/templates/update.html
@@ -8,7 +8,7 @@
     <title>update</title>
     
 </head>
-<body>
+<body style=" background-color: rgb(248, 228, 254);">
     
     <h1>Updating Blog</h1>
 
